syntax = "proto3";
package gamepb.friendpb;
option go_package = "qq-farm-bot/proto/friendpb";

message Plant {
    int64 dry_time_sec = 1;
    int64 weed_time_sec = 2;
    int64 insect_time_sec = 3;
    int64 ripe_time_sec = 4;
    int64 ripe_fruit_id = 5;
    int64 steal_plant_num = 6;
    int64 dry_num = 7;
    int64 weed_num = 8;
    int64 insect_num = 9;
}

message Tags {
    bool is_new = 1;
    bool is_follow = 2;
}

message GameFriend {
    int64 gid = 1;
    string open_id = 2;
    string name = 3;
    string avatar_url = 4;
    string remark = 5;
    int64 level = 6;
    int64 gold = 7;
    Tags tags = 8;
    Plant plant = 9;
    int32 authorized_status = 10;
}

message GetAllRequest {}
message GetAllReply {
    repeated GameFriend game_friends = 1;
    int64 application_count = 3;
}

message SyncAllRequest { repeated string open_ids = 2; }
message SyncAllReply {
    repeated GameFriend game_friends = 1;
    int64 application_count = 3;
}

message Application {
    int64 gid = 1;
    int64 time_at = 2;
    string open_id = 3;
    string name = 4;
    string avatar_url = 5;
    int64 level = 6;
}

message GetApplicationsRequest {}
message GetApplicationsReply {
    repeated Application applications = 1;
    bool block_applications = 2;
}

message AcceptFriendsRequest { repeated int64 friend_gids = 1; }
message AcceptFriendsReply { repeated GameFriend friends = 1; }

message RejectFriendsRequest { repeated int64 friend_gids = 1; }
message RejectFriendsReply {}

message SetBlockApplicationsRequest { bool block = 1; }
message SetBlockApplicationsReply { bool block = 1; }

message FriendApplicationReceivedNotify { repeated Application applications = 1; }
message FriendAddedNotify { repeated GameFriend friends = 1; }
